--- a/res/layout/fragment_nuevo_sintoma.xml
+++ b/res/layout/fragment_nuevo_sintoma.xml
@@ -196,6 +196,7 @@
                 android:layout_marginBottom="20dp"/>
             
             <TextView style="@style/WizardFormLabel"
+                android:id="@+id/textPrescritoMedico"
                 android:text="@string/prescritoMedico" />
 
             <Spinner android:id="@+id/spinPrescritoMedico"
@@ -204,6 +205,7 @@
                 android:layout_marginBottom="20dp"/>
             
             <TextView style="@style/WizardFormLabel"
+                android:id="@+id/textCualAntibiotico"
                 android:text="@string/cualAntibiotico" />
             
             <EditText android:id="@+id/inputCualAntibiotico"
