Se agrega campo visita a visitas fallidas El número de la visita se seleccionará manualmente tanto en visitas exitosas como fallidas

--- a/res/values/strings_seguimiento.xml
+++ b/res/values/strings_seguimiento.xml
@@ -41,6 +41,7 @@
 	<string name="wrongTime">Hora inválida</string>
 	<string name="wrongSelect">La respuesta para <xliff:g id="variable">%1$s</xliff:g> es requerida</string>
 	<string name="duplicateDate">Fecha ya está registrada</string>
+    <string name="duplicateVisit">Visita ya está registrada</string>
 	
 	<string name="sint">Sintomas</string>
 	<string name="fecha_sintoma">Fecha sintoma</string>
