--- a/res/layout/fragment_nueva_visita.xml
+++ b/res/layout/fragment_nueva_visita.xml
@@ -21,6 +21,14 @@
                 android:inputType="text" />
 
             <TextView style="@style/WizardFormLabel"
+                      android:text="@string/visit" />
+
+            <Spinner android:id="@+id/spinVisita"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_marginBottom="20dp"/>
+
+            <TextView style="@style/WizardFormLabel"
                 android:text="@string/fecha_visita" />
 
             <LinearLayout
