--- a/res/layout/fragment_nueva_visita_fallida.xml
+++ b/res/layout/fragment_nueva_visita_fallida.xml
@@ -42,7 +42,15 @@
 	                android:contentDescription="@string/app_name"
 	                android:src="@drawable/ic_menu_month" />
             </LinearLayout>
-            
+
+            <TextView style="@style/WizardFormLabel"
+                      android:text="@string/visit" />
+
+            <Spinner android:id="@+id/spinVisita"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_marginBottom="20dp"/>
+
             <TextView style="@style/WizardFormLabel"
                 android:text="@string/razonVisitaFallida" />
             
