Mejoras y correcciones. Merge MA 2018

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -43,7 +43,7 @@
         <item>@string/new_survey_5</item>
         <item>@string/samples</item>
         <item>@string/new_participant_sa_survey</item>
-        <item>@string/go_home</item>
+        <!--<item>@string/go_home</item>-->
     </string-array>
     
     <string-array name="menu_participante_caso">
