--- a/res/layout/menu_screen.xml
+++ b/res/layout/menu_screen.xml
@@ -14,16 +14,16 @@
         android:paddingRight="@dimen/padding_small"
         android:paddingTop="@dimen/padding_small"/>
 
-    
-    <ni.org.ics.estudios.appmovil.muestreoanual.ui.GridViewWithHeaderAndFooter
-        android:id="@+id/gridView1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:columnWidth="125dp"
-        android:gravity="center"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth">
-    </ni.org.ics.estudios.appmovil.muestreoanual.ui.GridViewWithHeaderAndFooter>
+
+    <GridView
+            android:id="@+id/gridView1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:columnWidth="125dp"
+            android:gravity="center"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth">
+    </GridView>
     
 
 </LinearLayout>
