Se corrige descarga de usuarios en estudio cohorte pediatrica Se habilita funconalidad de revisión de datos Se agregan "progres dialog" al buscar participante, seleccionar participante y revisión de datos Se agrega catálogo de relación familiar

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -108,5 +108,8 @@
         <item>@string/datos_parto</item>
         <item>@string/datos_casa</item>
         <item>@string/info_docs</item>
+        <item>@string/info_casachf</item>
+        <item>@string/info_casasa</item>
+        <item>@string/info_participantesa</item>
     </string-array>
 </resources>
