--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -69,6 +69,7 @@
         <item>@string/main_report</item>
         <item>@string/main_super</item>
         <item>@string/main_survey</item>
+        <item>@string/main_ingreso</item>
     </string-array>
 
     <string-array name="menu_info">
