Retoma de muestra y consentimiento seroprevalencia

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -85,7 +85,7 @@
         <item>@string/info_recon</item>
         <item>@string/info_sample</item>
         <item>@string/info_gift</item>
-        <item>@string/info_zika</item>
+        <item>@string/info_sa</item>
         <item>@string/datos_parto</item>
         <item>@string/datos_casa</item>
         <item>@string/info_docs</item>
