--- a/res/menu/menu_info.xml
+++ b/res/menu/menu_info.xml
@@ -23,6 +23,7 @@
             <item android:id="@+id/RECONSFLU" android:title="@string/info_reconflu"/>
             <item android:id="@+id/RECONS" android:title="@string/info_recon"/>
             <item android:id="@+id/ZIKA" android:title="@string/info_zika"/>
+            <item android:id="@+id/CONSSA" android:title="@string/info_sa"/>
             <item android:id="@+id/SURVEY3" android:title="@string/info_survey3"/>
             <item android:id="@+id/WEIGHT" android:title="@string/info_weight"/>
 			<item android:id="@+id/PARTO" android:title="@string/datos_parto"/>
