Corrección bug no guardaba fecha de nacimiento en tamizaje: Causa -: Fechas menores a 1 de enero de 1970 se representan como negativo al ejecutar getTime(), por tanto no las estaba asignando al objeto que se enviaba al servidor.

--- a/res/values/strings_preferences.xml
+++ b/res/values/strings_preferences.xml
@@ -14,6 +14,6 @@
     <string name="app_preferences">Configuración Aplicación</string>
     <string name="update_app_preferences">Actualizar Aplicación</string>
     <string name="version_app_preferences">Versión 3.9</string>
-    <string name="versiondate_app_preferences">Julio 31, 2018</string>
+    <string name="versiondate_app_preferences">Agosto 3, 2018</string>
   
 </resources>
