--- a/res/values/strings_recondengue_2018.xml
+++ b/res/values/strings_recondengue_2018.xml
@@ -15,6 +15,9 @@
     <string name="telefonoPersonaCasa">1.3 Teléfono</string>
     <string name="aceptaCohorteDengueRC2018">2. Acepta estudio Cohorte Dengue</string>
     <string name="emancipado2">3. ¿Participante Emancipad@?</string>
+    <string name="razonEmancipacion">3.1 Seleccione razón de emancipación</string>
+    <string name="otraRazonEmancipacion">3.1.1 Otra razón de emancipación</string>
+    <string name="informarEmancipado">Informar al supervisor</string>
     <string name="incDen">4. Criterios de Inclusión/Exclusión Dengue</string>
     <string name="incDenHint">Marque las casillas si el participante</string>
     <string name="noCumpleIncDen">El participante no cumple los criterios de Inclusión/Exclusión de Dengue. No podemos ingresarlo en el estudio</string>
@@ -27,8 +30,34 @@
     <string name="enfCronSN">7. Padece alguna enfermedad crónica</string>
     <string name="enfCronica">7.1 Seleccione la Enfermedad que padece</string>
     <string name="oEnfCronica">Escriba la Enfermedad Crónica</string>
-    <string name="enfCronicaAnio">Año que fue diagnosticada la enfermedad</string>
-    <string name="enfCronicaMes">Mes que fue diagnosticada la enfermedad</string>
+    <string name="enfCronicaAnio1">Año diagnóstico enfermedad 1</string>
+    <string name="enfCronicaMes1">Mes diagnóstico enfermedad 1</string>
+    <string name="enfCronicaAnio2">Año diagnóstico enfermedad 2</string>
+    <string name="enfCronicaMes2">Mes diagnóstico enfermedad 2</string>
+    <string name="enfCronicaAnio3">Año diagnóstico enfermedad 3</string>
+    <string name="enfCronicaMes3">Mes diagnóstico enfermedad 3</string>
+    <string name="enfCronicaAnio4">Año diagnóstico enfermedad 4</string>
+    <string name="enfCronicaMes4">Mes diagnóstico enfermedad 4</string>
+    <string name="enfCronicaAnio5">Año diagnóstico enfermedad 5</string>
+    <string name="enfCronicaMes5">Mes diagnóstico enfermedad 5</string>
+    <string name="enfCronicaAnio6">Año diagnóstico enfermedad 6</string>
+    <string name="enfCronicaMes6">Mes diagnóstico enfermedad 6</string>
+    <string name="enfCronicaAnio7">Año diagnóstico enfermedad 7</string>
+    <string name="enfCronicaMes7">Mes diagnóstico enfermedad 7</string>
+    <string name="enfCronicaAnio8">Año diagnóstico enfermedad 8</string>
+    <string name="enfCronicaMes8">Mes diagnóstico enfermedad 8</string>
+    <string name="enfCronicaAnio9">Año diagnóstico enfermedad 9</string>
+    <string name="enfCronicaMes9">Mes diagnóstico enfermedad 9</string>
+    <string name="enfCronicaAnio10">Año diagnóstico enfermedad 10</string>
+    <string name="enfCronicaMes10">Mes diagnóstico enfermedad 10</string>
+    <string name="enfCronicaAnio11">Año diagnóstico enfermedad 11</string>
+    <string name="enfCronicaMes11">Mes diagnóstico enfermedad 11</string>
+    <string name="enfCronicaAnio12">Año diagnóstico enfermedad 12</string>
+    <string name="enfCronicaMes12">Mes diagnóstico enfermedad 12</string>
+    <string name="enfCronicaAnio13">Año diagnóstico enfermedad 13</string>
+    <string name="enfCronicaMes13">Mes diagnóstico enfermedad 13</string>
+    <string name="enfCronicaAnio14">Año diagnóstico enfermedad 14</string>
+    <string name="enfCronicaMes14">Mes diagnóstico enfermedad 14</string>
     <string name="mesInvalido">Mes seleccionado no es válido</string>
     <string name="tomaTx">7.1.2 ¿Toma algún tratamiento?</string>
     <string name="cualesTx">7.1.3 ¿Cuál tratamiento?</string>
@@ -39,6 +68,7 @@
     <string name="parteADen">9. ¿Acepta Parte A del Consentimiento de Dengue?</string>
     <string name="rechDen">9.1 Motivo de rechazo Dengue</string>
     <string name="otroRechDen">9.1.1 Otro motivo de rechazo Dengue</string>
+    <string name="aceptaContactoFuturoRC2018">9.2 Contacto en el futuro:</string>
     <string name="parteBDen">10. ¿Acepta Parte B?</string>
     <string name="parteBDenHint">Estudios Futuros Dengue</string>
     <string name="parteCDen">11. ¿Acepta Parte C?</string>
