Tamizaje: Se agrega variable para enfermedadCronica Nuevo ingreso CHF: Registrar muestras en pantalla de familia Sintomas: Se egrega nueva pregunta Respiracion rapida Menu familia: Se deshabilitan todas las opciones en pantalla participante, menos las muestras Contactos Visitas: No se permite ingresar en la misma visita al mismo contacto en la misma fecha, ni a él mismo

--- a/res/values/strings_recondengue_2018.xml
+++ b/res/values/strings_recondengue_2018.xml
@@ -30,34 +30,34 @@
     <string name="enfCronSN">7. Padece alguna enfermedad crónica</string>
     <string name="enfCronica">7.1 Seleccione la Enfermedad que padece</string>
     <string name="oEnfCronica">Escriba la Enfermedad Crónica</string>
-    <string name="enfCronicaAnio1">Año diagnóstico enfermedad 1</string>
-    <string name="enfCronicaMes1">Mes diagnóstico enfermedad 1</string>
-    <string name="enfCronicaAnio2">Año diagnóstico enfermedad 2</string>
-    <string name="enfCronicaMes2">Mes diagnóstico enfermedad 2</string>
-    <string name="enfCronicaAnio3">Año diagnóstico enfermedad 3</string>
-    <string name="enfCronicaMes3">Mes diagnóstico enfermedad 3</string>
-    <string name="enfCronicaAnio4">Año diagnóstico enfermedad 4</string>
-    <string name="enfCronicaMes4">Mes diagnóstico enfermedad 4</string>
-    <string name="enfCronicaAnio5">Año diagnóstico enfermedad 5</string>
-    <string name="enfCronicaMes5">Mes diagnóstico enfermedad 5</string>
-    <string name="enfCronicaAnio6">Año diagnóstico enfermedad 6</string>
-    <string name="enfCronicaMes6">Mes diagnóstico enfermedad 6</string>
-    <string name="enfCronicaAnio7">Año diagnóstico enfermedad 7</string>
-    <string name="enfCronicaMes7">Mes diagnóstico enfermedad 7</string>
-    <string name="enfCronicaAnio8">Año diagnóstico enfermedad 8</string>
-    <string name="enfCronicaMes8">Mes diagnóstico enfermedad 8</string>
-    <string name="enfCronicaAnio9">Año diagnóstico enfermedad 9</string>
-    <string name="enfCronicaMes9">Mes diagnóstico enfermedad 9</string>
-    <string name="enfCronicaAnio10">Año diagnóstico enfermedad 10</string>
-    <string name="enfCronicaMes10">Mes diagnóstico enfermedad 10</string>
-    <string name="enfCronicaAnio11">Año diagnóstico enfermedad 11</string>
-    <string name="enfCronicaMes11">Mes diagnóstico enfermedad 11</string>
-    <string name="enfCronicaAnio12">Año diagnóstico enfermedad 12</string>
-    <string name="enfCronicaMes12">Mes diagnóstico enfermedad 12</string>
-    <string name="enfCronicaAnio13">Año diagnóstico enfermedad 13</string>
-    <string name="enfCronicaMes13">Mes diagnóstico enfermedad 13</string>
-    <string name="enfCronicaAnio14">Año diagnóstico enfermedad 14</string>
-    <string name="enfCronicaMes14">Mes diagnóstico enfermedad 14</string>
+    <string name="enfCronicaAnio1">.Año diagnóstico enfermedad.</string>
+    <string name="enfCronicaMes1">.Mes diagnóstico enfermedad.</string>
+    <string name="enfCronicaAnio2">..Año diagnóstico enfermedad..</string>
+    <string name="enfCronicaMes2">..Mes diagnóstico enfermedad..</string>
+    <string name="enfCronicaAnio3">-Año diagnóstico enfermedad-</string>
+    <string name="enfCronicaMes3">-Mes diagnóstico enfermedad-</string>
+    <string name="enfCronicaAnio4">--Año diagnóstico enfermedad.</string>
+    <string name="enfCronicaMes4">--Mes diagnóstico enfermedad.</string>
+    <string name="enfCronicaAnio5">.-Año diagnóstico enfermedad.-</string>
+    <string name="enfCronicaMes5">.-Mes diagnóstico enfermedad.-</string>
+    <string name="enfCronicaAnio6">..-Año diagnóstico enfermedad..-</string>
+    <string name="enfCronicaMes6">..-Mes diagnóstico enfermedad..-</string>
+    <string name="enfCronicaAnio7">.-.Año diagnóstico enfermedad.-.</string>
+    <string name="enfCronicaMes7">.-.Mes diagnóstico enfermedad.-.</string>
+    <string name="enfCronicaAnio8">-.-Año diagnóstico enfermedad-.-</string>
+    <string name="enfCronicaMes8">-.-Mes diagnóstico enfermedad-.-</string>
+    <string name="enfCronicaAnio9">--.Año diagnóstico enfermedad--.</string>
+    <string name="enfCronicaMes9">--.Mes diagnóstico enfermedad--.</string>
+    <string name="enfCronicaAnio10">--Año diagnóstico enfermedad..</string>
+    <string name="enfCronicaMes10">--Mes diagnóstico enfermedad..</string>
+    <string name="enfCronicaAnio11">..Año diagnóstico enfermedad.</string>
+    <string name="enfCronicaMes11">..Mes diagnóstico enfermedad.</string>
+    <string name="enfCronicaAnio12">.Año diagnóstico enfermedad..</string>
+    <string name="enfCronicaMes12">.Mes diagnóstico enfermedad..</string>
+    <string name="enfCronicaAnio13">-Año diagnóstico enfermedad.</string>
+    <string name="enfCronicaMes13">-Mes diagnóstico enfermedad.</string>
+    <string name="enfCronicaAnio14">--Año diagnóstico enfermedad-</string>
+    <string name="enfCronicaMes14">--Mes diagnóstico enfermedad-</string>
     <string name="mesInvalido">Mes seleccionado no es válido</string>
     <string name="tomaTx">7.1.2 ¿Toma algún tratamiento?</string>
     <string name="cualesTx">7.1.3 ¿Cuál tratamiento?</string>
