--- a/res/layout/fragment_nuevo_sintoma.xml
+++ b/res/layout/fragment_nuevo_sintoma.xml
@@ -178,6 +178,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"/>
+
+            <TextView style="@style/WizardFormLabel"
+                      android:text="@string/respiracionRapida" />
+
+            <Spinner android:id="@+id/spinRespiracionRapida"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_marginBottom="20dp"/>
             
             <TextView style="@style/WizardFormLabel"
                 android:text="@string/oseltamivir" />
