--- a/res/values/strings_seguimiento.xml
+++ b/res/values/strings_seguimiento.xml
@@ -31,7 +31,7 @@
     <string name="fecha_visita">Fecha visita</string>
     <string name="fechaInicio">Fecha de inicio monitoreo intensivo</string>
     <string name="wrong_fecha_visita">Error en la fecha visita</string>
-    <string name="horaProbableVisita">Hora probable para siguiente visita</string>
+    <string name="horaProbableVisita">Hora que el participante está en casa</string>
     <string name="wrongHoraProbableVisita">Error en la hora probable para siguiente visita</string>
     <string name="expCS">Expediente en el CS</string>
     <string name="wrongExpCS">Selección inválida en la pregunta expediente en el CS</string>
