Tomar coordenadas gps y datos de dirección en formulario de odk. Tmotivos de toma coordenadas: 1 ingreso, 2 cambio domicilio y 3 sin punto gps

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -93,6 +93,7 @@
         <item>@string/info_casasa</item>
         <item>@string/info_participantesa</item>
         <item>@string/info_telefonos</item>
+        <item>@string/info_coordenadas</item>
 
     </string-array>
     <string-array name="menu_review">
