--- a/res/menu/menu_info.xml
+++ b/res/menu/menu_info.xml
@@ -34,6 +34,7 @@
             <item android:id="@+id/ENCASA_CHF" android:title="@string/casa_chf"/>
             <item android:id="@+id/ENCASA_SA" android:title="@string/new_house_sa_survey"/>
             <item android:id="@+id/ENPART_SA" android:title="@string/new_participant_sa_survey"/>
+            <item android:id="@+id/COORDENADAS" android:title="@string/info_coordenadas"/>
         </menu>
     </item>
 
