--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -57,10 +57,12 @@
         <item>@string/sint</item>
         <item>@string/contacts</item>
         <item>@string/samples_caso</item>
+        <item>@string/gift</item>
     </string-array>
 
     <string-array name="menu_visita_final">
         <item>@string/samples_caso</item>
+        <item>@string/gift</item>
     </string-array>
 
     <!-- Muestreo anual-->
